# LOD-Workbench

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  rustfmt.toml
.github/workflows/: beta-pages.yml  ci.yml  docs.yml  pages.yml  release.yml  reusable-build.yml
apps/web/: index.html  package-lock.json  package.json
apps/web/src/: main.jsx  style.css
apps/web/src/components/: CodeEditor.jsx  GraphViewer.jsx
apps/web/src/lib/: api.js
crates/lod-api/: Cargo.toml
crates/lod-api/src/: main.rs
crates/lod-cli/: Cargo.toml
crates/lod-cli/src/: main.rs
crates/lod-core/: Cargo.toml
crates/lod-core/src/: convert.rs  error.rs  facade.rs  format.rs  inspect.rs  lib.rs  map.rs  model.rs  parser.rs  validate.rs  visualize.rs
crates/lod-core/tests/: core_tests.rs
docs/: README.md  api.md  architecture.md  branch-protection.md  cli.md  release.md  roadmap.md  troubleshooting.md  versioning.md  web.md
examples/: data.ttl  data1.ttl  data2.ttl  data3.ttl  data4.ttl  data5.ttl  mapping.yml  researchers.csv  shapes-rich.ttl  shapes.ttl  shapes1.ttl  shapes2.ttl  shapes3.ttl  shapes4.ttl  shapes5.ttl  transport-rich.ttl  transport.jsonld  transport.nt  transport.rdf  transport.trig
