[workspace]
members = [
    "crates/lod-core",
    "crates/lod-cli",
    "crates/lod-api"
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = [
    "Pr. Youness BOUTYOUR <youness.boutyour@um5.ac.ma> (ENSIAS, Mohammed V University)",
    "LOD Workbench Contributors"
]
license = "MIT"
repository = "https://example.org/lod-workbench-rs"

[workspace.dependencies]
anyhow = "1"
axum = "0.7"
clap = { version = "4", features = ["derive"] }
csv = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
