[package]
name = "lod-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
csv.workspace = true
oxiri.workspace = true
oxrdf.workspace = true
oxrdfxml.workspace = true
rio_api.workspace = true
rio_turtle.workspace = true
oxttl.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dependencies.rudof_lib]
version = "0.3.4"
default-features = false
optional = true

[features]
default = []
rudof-shacl = ["dep:rudof_lib"]
